refactor: Mostly cosmetic improvements